Update images section

--- a/images.html
+++ b/images.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Images, Video, Favicons, &amp; Tables</title>
         <!-- TO DO:add your name to the meta author tag -->
-        <meta name="author" content="">
+        <meta name="author" content="Marcia Karen Smith Abrams Almasi">
         <meta name="description" content="Practice with images, video, svgs, favicons, and tables for G.I.T. 215">
 
         <!-- A FAVICON -->
@@ -96,7 +96,9 @@
                     <p>The video that we will embed below is included in the video folder of this project. Your zyBook explains how these tags work in detail, but today we'll write some minimum code to get the video to display on our page. Below, we'll add the video from the video folder in the project. Include the attribute that will display controls for the video, and set the width.</p>
                     
                     <!-- TO DO: Add the video from the files below using HTML5 -->
-
+                        <img src="images/square-red-blue.jpg"  alt=" width="400"  height="400">
+                        <img src="images/memphis-recording-service.jpg" alt="this is a neon sign in white and red that says Memphis Recording Service "width="400" height="400"
+                        
                     <a href="https://www.pexels.com/video/laptop-use-as-controller-for-a-modern-sound-system-3134599/" class="credit">Video by Caleb Oquendo</a>
                 </section>
 
